--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,10 @@ body {
     text-align: center;
   }
 
+  .success {
+    color: #28a745;
+  }
+  
    /* create.php */
  .registration {
   box-sizing: border-box;
