--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,11 @@ body {
     color: #28a745;
   }
   
+  .edit-icon {
+    height: 1.5rem;
+    vertical-align: top;
+  }
+  
    /* create.php */
  .registration {
   box-sizing: border-box;
